--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 
 <body>
     <!-- section 1 -->
-    <div class="container-one">
-        <nav class="navbar">
+    <div class="header">
+        <div class="navbar">
             <div class="logo">Foodie Corgis</div>
                 <div class="links">
-                    <a href='#'>Link One</a>
-                    <a href='#'>Link Two</a>
-                    <a href='#'>Link Three</a>
+                    <ul>
+                        <li><a href='#'>Link One</a></li>
+                        <li><a href='#'>Link Two</a></li>
+                        <li><a href='#'>Link Three</a></li>
+                    </ul>
                 </div>
-        </nav>
+        </div>
 
             <!--info below the navbar -->
         <div class="contentone">
@@ -38,6 +40,10 @@
                 </div>
         </div>
     </div>
+
+
+    <!-- Section 2 -->
+
 
 
 
