finish html and separated sections styling'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- section 1 -->
     <div class="header">
         <div class="navbar">
-            <div class="logo">Foodie Corgis</div>
+            <div class="logo">Foodie Corgis &#128021;</div>
                 <div class="links">
                     <ul>
                         <li><a href='#'>Link One</a></li>
@@ -33,43 +33,65 @@
             <div class="landing">
                 <h1>Welcome to Katsu and Kewpie's Fanpage!</h1>
                 <p>This webpage is to show the cuteness of the foodie corgis! Katsu's name comes from the food tonkatsu and Kewpie's name comes from the popular brand, Kewpie Mayo. To learn more about these cuties, click on the button below!</p>
-                <button type="button">Learn More</button>
+                <button>Learn More</button>
             </div>
                 <div class="headerimg">
-                    <img src="images/one.jpg" alt="katsukewpie"/>
+                    <img src="images/one.jpg" alt="katsukewpie" class="imgone"/>
                 </div>
         </div>
     </div>
 
 
     <!-- Section 2 -->
+    <div class="main">
+        <div class="title"><h2>Some Random Information.</h2></div>
+
+        <!-- container that holds the info/pic -->
+        <div class="container">
+            <div class="info">
+                <img src="images/two.jpg" alt="katsukewpie2"/>
+                <div class="subtext">Katsu and Kewpie are pembroke welsh corgis!</div>
+            </div>
+
+            <div class="info">
+                <img src="images/three.jpg" alt="Katsu"/>
+                <div class="subtext">Katsu is the older than Kewpie by 6 years.</div>
+            </div>
+
+            <div class="info">
+                <img src="images/four.jpg" alt="Kewpie"/>
+                <div class="subtext">Kewpie is smaller than Katsu in size and age.</div>
+            </div>
+
+            <div class="info">
+                <img src="images/five.png" alt="katsukewpie3"/>
+                <div class="subtext">Katsu and Kewpie love to chase each other for fun!</div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- quote section -->
+        <div class="quote">
+                <em>Woof Woof Bark Bork Bark BORK</em>
+                    <p class="tinytext">- Katsu & Kewpie</p>
+            </div>
+
+
+    <!-- call to action  -->
+        <div class="action">
+            <div class="actiontext">Join the fanclub! It's time!</div>
+                <div class="subtext">Sign up for daily Katsu and Kewpie pictures by clicking that button right over there!</div>
+            <button>Sign up!</button>
+        </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- section 3 - footer -->
+    <div class="footer">
+        <p>Copyright © Kellyhubs for The Odin Project 2023 </p>
+    </div>
 </body>
+
 </html>
