--- a/index.html
+++ b/index.html
@@ -21,23 +21,26 @@
             <div class="logo">Foodie Corgis &#128021;</div>
                 <div class="links">
                     <ul>
-                        <li><a href='#'>Link One</a></li>
-                        <li><a href='#'>Link Two</a></li>
-                        <li><a href='#'>Link Three</a></li>
+                        <li><a href='#'>Bork</a></li>
+                        <li><a href='#'>Woof</a></li>
+                        <li><a href='#'>Sniff</a></li>
                     </ul>
                 </div>
         </div>
 
             <!--info below the navbar -->
-        <div class="contentone">
+        <div class="welcome">
             <div class="landing">
-                <h1>Welcome to Katsu and Kewpie's Fanpage!</h1>
-                <p>This webpage is to show the cuteness of the foodie corgis! Katsu's name comes from the food tonkatsu and Kewpie's name comes from the popular brand, Kewpie Mayo. To learn more about these cuties, click on the button below!</p>
-                <button>Learn More</button>
+                <h1 class="hero">Welcome to Katsu and Kewpie's Fanpage!</h1>
+                <p class="secondary">This webpage is to show the cuteness of the foodie corgis! Katsu's name comes from the food tonkatsu and Kewpie's name comes from the popular brand, Kewpie Mayo. To learn more about these cuties, click on the button below!</p>
+                <button class="secondarybtn">Learn More</button>
             </div>
-                <div class="headerimg">
-                    <img src="images/one.jpg" alt="katsukewpie" class="imgone"/>
+                <div class="landing-right">
+                    <div class="img">
+                        <img src="images/one.jpg" alt="katsukewpie" class="imgone"/>
+                    </div>
                 </div>
+
         </div>
     </div>
 
