styling and html final

--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
 
     <!-- Section 2 -->
     <div class="main">
-        <div class="title"><h2>Some Random Information.</h2></div>
+        <h2>Some Random Information</h2>
 
         <!-- container that holds the info/pic -->
         <div class="container">
-            <div class="info">
+            <div class="card">
                 <img src="images/two.jpg" alt="katsukewpie2"/>
-                <div class="subtext">Katsu and Kewpie are pembroke welsh corgis!</div>
+                <p class="subtext">Katsu and Kewpie are pembroke welsh corgis!</p>
             </div>
 
-            <div class="info">
+            <div class="card">
                 <img src="images/three.jpg" alt="Katsu"/>
-                <div class="subtext">Katsu is the older than Kewpie by 6 years.</div>
+                <p class="subtext">Katsu is the older than Kewpie by 6 years.</p>
             </div>
 
-            <div class="info">
+            <div class="card">
                 <img src="images/four.jpg" alt="Kewpie"/>
-                <div class="subtext">Kewpie is smaller than Katsu in size and age.</div>
+                <p class="subtext">Kewpie is smaller than Katsu in size and age.</p>
             </div>
 
-            <div class="info">
+            <div class="card">
                 <img src="images/five.png" alt="katsukewpie3"/>
-                <div class="subtext">Katsu and Kewpie love to chase each other for fun!</div>
+                <p class="subtext">Katsu and Kewpie love to chase each other for fun!</p>
             </div>
         </div>
     </div>
@@ -82,11 +82,16 @@
 
 
     <!-- call to action  -->
+    <div class="sign-up">
         <div class="action">
-            <div class="actiontext">Join the fanclub! It's time!</div>
-                <div class="subtext">Sign up for daily Katsu and Kewpie pictures by clicking that button right over there!</div>
-            <button>Sign up!</button>
+            <div class="action-left">
+                <strong>Join the fanclub! It's time!</strong>
+                <p class="action-subtext">Sign up for daily Katsu and Kewpie pictures by clicking that button right over there!</p></div>
+            <div class="action-right">
+                <button>Sign up!</button>
+            </div>
         </div>
+    </div>
 
 
 
